project(main)
cmake_minimum_required(VERSION 2.6)
#add_definitions(-DDEBUG)
#set(CMAKE_VERBOSE_MAKEFILE on)
set(CMAKE_BUILD_TYPE Release)
#set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_FLAGS "")
set(CMAKE_CXX_FLAGS_DEBUG "-g3 -std=c++0x -Wall -Wno-unused-parameter -lpthread")
set(CMAKE_CXX_FLAGS_RELEASE "-g3 -std=c++0x -O2 -Wall -Wno-unused-parameter -Wno-strict-aliasing -ldl -lpthread")
MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/common)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
add_subdirectory(common)
aux_source_directory(./src  dir_srcs)
add_executable(mailsender ${dir_srcs})
target_link_libraries(mailsender commonlib libssl.a libcrypto.a)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
