project(main)
cmake_minimum_required(VERSION 2.6)
#add_definitions(-DDEBUG)
#set(CMAKE_VERBOSE_MAKEFILE on)
set(CMAKE_BUILD_TYPE Release)
#set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_COMPILER "g++")
#set(CMAKE_CXX_FLAGS "")
set(CMAKE_CXX_FLAGS_DEBUG "-g3 -std=c++0x -Wall -Wno-unused-parameter -lpthread")
set(CMAKE_CXX_FLAGS_RELEASE "-g3 -std=c++0x -O2 -Wall -Wno-deprecated-declarations  -lpthread -lrt")
MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/mysql)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/fastdfs)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/fastcommon)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/uuid)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/zlib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/component)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
#find_package(Boost REQUIRED)
aux_source_directory(./common  dir_srcs)
#aux_source_directory(./common/zipfile zipfile_srcs)
#add_executable(client_sdk_test ${dir_srcs})
#add_library(common STATIC ${dir_srcs} ${zipfile_srcs})
add_library(common STATIC ${dir_srcs})
#target_link_libraries(common client_sdk libboost_system.a libboost_thread.a libboost_filesystem.a libboost_date_time.a libjsoncpp.a libmemcached.a libmemcachedutil.a libmysqlclient.a libuuid.a)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 
#set(CMAKE_EXE_LINKER_FLAGS "-lrt")
