project(main)
cmake_minimum_required(VERSION 2.6)
#add_definitions(-DDEBUG)
#set(CMAKE_VERBOSE_MAKEFILE on)
set(CMAKE_BUILD_TYPE Release)
#set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_COMPILER "g++")
#set(CMAKE_CXX_FLAGS "-std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG "-g3 -std=c++11 -Wall -Wno-unused-parameter")
set(CMAKE_CXX_FLAGS_RELEASE "-g3 -std=c++0x -O2 -Wall -Wno-deprecated-declarations -pthread -lrt -ldl -static-libstdc++")
MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
SET(basedir ${PROJECT_SOURCE_DIR}/../..)
MESSAGE(STATUS "This is base directory " ${basedir})
INCLUDE_DIRECTORIES(${basedir}/include)
INCLUDE_DIRECTORIES(${basedir}/include/mysql)
INCLUDE_DIRECTORIES(${basedir}/component)
LINK_DIRECTORIES(${basedir}/lib)
#add_subdirectory(intf)
aux_source_directory(./src  dir_srcs)
add_executable(proxy ${dir_srcs})
target_link_libraries(proxy libcomponent.a liblog4cplus.a libboost_system.a libboost_thread.a libboost_filesystem.a libboost_date_time.a libjsoncpp.a libmemcached.a libmemcachedutil.a libuuid.a libssl.a libcrypto.a)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 
#set(CMAKE_EXE_LINKER_FLAGS "-lrt")
